# SCRAPERR

./: .env.example  .gitignore  01-architecture.md  02-database-schema.md  03-scraper-spec.md  04-frontend-spec.md  05-edge-functions-spec.md  06-folder-structure.md  07-roadmap-phases.md  08-coding-standards.md  09-deployment.md  CLAUDE.md  PROJECT.md  README.md  vercel.json
services/scraper/: pyproject.toml
services/scraper/src/scraper/: cli.py  config.py
services/scraper/src/scraper/core/: base_scraper.py  http_client.py  logger.py
services/scraper/src/scraper/domain/: models.py  normalizer.py
services/scraper/src/scraper/pipelines/: supabase_pipeline.py
services/scraper/src/scraper/spiders/: cruceros_cl.py
services/scraper/tests/: test_cruceros_cl_full_spider.py  test_cruceros_cl_home_spider.py  test_http_client.py  test_normalizer.py  test_package.py  test_supabase_pipeline.py
services/scraper/tests/fixtures/: Crucero Caribe salida de Miami, le 2026-12-13 desde US$ 381 a bordo del Independence of the Seas.html  cruceros_cl_detail.html  cruceros_cl_detail_multiword_region.html  cruceros_cl_home.html  cruceros_cl_listing.html
services/scraper/tests/fixtures/Crucero Caribe salida de Miami, le 2026-12-13 desde US$ 381 a bordo del Independence of the Seas_files/: 030b48e168251f6d.js.descarga  0803d83ae7f8e6e4.js.descarga  09dba4940d904c16.js.descarga  0c5dcc9a91801551.js.descarga  0fa9c62de68b0a28.js.descarga  1402de006c49abd2.js.descarga  1a92cd4e5d44fc5c.css  2ebe8ab4dedb8678.js.descarga  36b2c3dedaa6726a.js.descarga  3b6557e7a3ca8a36.js.descarga  (+57 more)
(+65 files in other folders)
